# ThErrorsInGoldenModes

./: .gitignore  BaseMacros.h  BqDqDqbar.cpp  BqDqDqbar.h  BqDqDqbar_isospin.cpp  BqDqDqbar_su3.cpp  BqDqDqbartry.cpp  CKM.cpp  CKM.h  CMakeLists.txt  CorrelatedGaussianObservables.cpp  CorrelatedGaussianObservables.h  CorrelatedGaussianParameters.cpp  CorrelatedGaussianParameters.h  ModelParameter.h  PDGAverage.cpp  PDGAverage.h  Pull.h  bdecays.all.ewp.frm  dato.h  goldenmodes.cpp  goldenmodes.h  goldenmodesB.cpp  goldenmodesB.h  goldenmodesB_indSU3.cpp  goldenmodesB_indSU3.h  histo.h  mainGM.cpp
